modification page deroulement

--- a/conclusion.html
+++ b/conclusion.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="styles/livrable.css" type="text/css" />
+    <link rel="stylesheet" href="styles/conslusion.css" type="text/css" />
     <title>Conclusion</title>
 </head>
 
@@ -26,104 +26,58 @@
         <div>
             <h2>Bilan du projet</h2>
             <p>
-                Bilan général du projet. ed ut tum ad senem senex de senectute, sic hoc libro ad amicum amicissimus
-                scripsi
-                de
-                amicitia.
-                Tum est Cato locutus, quo erat nemo fere senior temporibus illis, nemo prudentior; nunc Laelius et
-                sapiens
-                (sic
-                enim est
-                habitus) et amicitiae gloria excellens de amicitia loquetur. Tu velim a me animum parumper avertas,
-                Laelium
-                loqui ipsum
-                putes. C. Fannius et Q. Mucius ad socerum veniunt post mortem Africani; ab his sermo oritur, respondet
-                Laelius,
-                cuius tota
-                disputatio est de amicitia, quam legens te ipse cognosces.
+                Dans l'ensemble, nous sommes plutôt satisfaits d'avoir mené ce projet malgré les nombreux problèmes
+                informatiques que nous avons rencontrés. En effet, ces problèmes nous ont causé beaucoup de difficultés
+                et demandé beaucoup de temps. Cependant, comprendre le protocole expérimental d'une étude scientifique,
+                mener des expériences et analyser les résultats que nous avons produits fut intéressant et enrichissant.
             </p>
 
             <h3>Adrien</h3>
-            <p>
-                ed ut tum ad senem senex de senectute, sic hoc libro ad amicum amicissimus scripsi de
-                amicitia.
-                Tum est Cato locutus, quo erat nemo fere senior temporibus illis, nemo prudentior; nunc Laelius et
-                sapiens
-                (sic
-                enim est
-                habitus) et amicitiae gloria excellens de amicitia loquetur. Tu velim a me animum parumper avertas,
-                Laelium
-                loqui ipsum
-                putes. C. Fannius et Q. Mucius ad socerum veniunt post mortem Africani; ab his sermo oritur, respondet
-                Laelius,
-                cuius tota
-                disputatio est de amicitia, quam legens te ipse cognosces.
+            <p id="bilan">
+                "J'ai trouvé particulièrement plaisant le fait d'interagir avec les participants lors de nos
+                expériences. Les observer, étudier leurs réactions pendant le jeu et veiller au bon déroulement de
+                l'expérience ont
+                été des moments plaisant. De plus, j'ai aussi bien aimé analyser les résultats de l'expérience."
             </p>
 
             <h3>Théo</h3>
-            <p>
-                ed ut tum ad senem senex de senectute, sic hoc libro ad amicum amicissimus scripsi de
-                amicitia.
-                Tum est Cato locutus, quo erat nemo fere senior temporibus illis, nemo prudentior; nunc Laelius et
-                sapiens
-                (sic
-                enim est
-                habitus) et amicitiae gloria excellens de amicitia loquetur. Tu velim a me animum parumper avertas,
-                Laelium
-                loqui ipsum
-                putes. C. Fannius et Q. Mucius ad socerum veniunt post mortem Africani; ab his sermo oritur, respondet
-                Laelius,
-                cuius tota
-                disputatio est de amicitia, quam legens te ipse cognosces.
+            <p id="bilan">
+                "Ce qui m'a le plus plu dans ce projet, c'est la possibilité de découvrir et d'appliquer de nombreuses
+                notions en recherche scientifique ainsi que des concepts abordés tout au long de notre première année à
+                l'ENSC. Nous avons eu la chance de travailler sur un sujet amusant avec un jeu de société comme
+                Galerapagos. Cependant, ce fut parfois stressant de gérer tous les problèmes informatiques que nous
+                avons rencontrés."
             </p>
 
             <h3>Eudes</h3>
-            <p>
-                ed ut tum ad senem senex de senectute, sic hoc libro ad amicum amicissimus scripsi de
-                amicitia.
-                Tum est Cato locutus, quo erat nemo fere senior temporibus illis, nemo prudentior; nunc Laelius et
-                sapiens
-                (sic
-                enim est
-                habitus) et amicitiae gloria excellens de amicitia loquetur. Tu velim a me animum parumper avertas,
-                Laelium
-                loqui ipsum
-                putes. C. Fannius et Q. Mucius ad socerum veniunt post mortem Africani; ab his sermo oritur, respondet
-                Laelius,
-                cuius tota
-                disputatio est de amicitia, quam legens te ipse cognosces.
+            <p id="bilan">
+                "Ce projet m'a plu pour plusieurs raisons : premièrement, j'ai trouvé enrichissante l'expérience
+                d'endosser le rôle d'expérimentateur, de conduire une expérience et d'analyser les résultats. Les
+                problèmes informatiques m'ont bien sûr déplu."
+
             </p>
         </div>
 
         <div>
             <h2>Acquis pédagogiques</h2>
             <p>
-                ed ut tum ad senem senex de senectute, sic hoc libro ad amicum amicissimus scripsi de
-                amicitia.
-                Tum est Cato locutus, quo erat nemo fere senior temporibus illis, nemo prudentior; nunc Laelius et
-                sapiens
-                (sic
-                enim est
-                habitus) et amicitiae gloria excellens de amicitia loquetur. Tu velim a me animum parumper avertas,
-                Laelium
-                loqui ipsum
-                putes. C. Fannius et Q. Mucius ad socerum veniunt post mortem Africani; ab his sermo oritur, respondet
-                Laelius,
-                cuius tota
-                disputatio est de amicitia, quam legens te ipse cognosces.
-                ed ut tum ad senem senex de senectute, sic hoc libro ad amicum amicissimus scripsi de
-                amicitia.
-                Tum est Cato locutus, quo erat nemo fere senior temporibus illis, nemo prudentior; nunc Laelius et
-                sapiens
-                (sic
-                enim est
-                habitus) et amicitiae gloria excellens de amicitia loquetur. Tu velim a me animum parumper avertas,
-                Laelium
-                loqui ipsum
-                putes. C. Fannius et Q. Mucius ad socerum veniunt post mortem Africani; ab his sermo oritur, respondet
-                Laelius,
-                cuius tota
-                disputatio est de amicitia, quam legens te ipse cognosces.
+                Ce projet a été une opportunité précieuse pour mettre en pratique les compétences et les connaissances
+                que nous avons
+                acquises au cours de notre formation. En travaillant en équipe, nous avons pu développer nos compétences
+                en gestion de projet et en communication avec des clients, des aspects essentiels pour notre future
+                carrière d'ingénieur.
+                <br><br>
+                Nous avons utilisé nos connaissances en conception centrée utilisateur pour vérifier des questionnaires
+                et nous avons appliqué des outils de gestion de projet tels que les diagrammes de Gantt et les matrices
+                de risque. En adoptant une approche agile, nous avons pu gérer
+                notre emploi du temps malgré tous les problèmes que nous avons rencontrés.
+                <br><br>
+                Participer à ce projet transdisciplinaire nous a permis d'acquérir de nouvelles compétences, notamment
+                en participants à la passation d'une expérience et donc à l'application d'un protocole expérimental.
+                <br><br>
+                En résumé, ce projet nous a offert une expérience pratique précieuse, nous permettant de renforcer nos
+                compétences techniques et méthodologiques tout en nous sensibilisant aux exigences du monde
+                professionnel dans le domaine de l'ingénierie et de la recherche.
             </p>
         </div>
 
@@ -137,10 +91,13 @@
             </p>
             <h3>Apport sociétal</h3>
             <p>
-                La loi Grenelle 1 (dans son article 55 du 3 août 2009) impose à tous les établissements d’enseignement
-                supérieur de mettre en place une démarche Développement Durable, sous la dénomination « Plan Vert ».
-                Notre projet s’inscrit bien dans la démarche de ce plan puisqu’il soutient les différents points du
-                développement durable.
+                En prenant part à ce projet, nous avons contribué à l'avancée scientifique. Notre projet
+                contribue à mieux comprendre les dynamiques des interactions entre les êtres humains et les machines, ce
+                qui est crucial dans un monde de plus en plus numérisé et automatisé.
+                <br>
+                Ainsi, notre projet pourrait avoir un impact significatif sur la façon dont nous concevons, utilisons et
+                interagissons avec les intelligence artificielle.
+
             </p>
             <h3>Apport écologique</h3>
             <p>
