--- a/deroulement.html
+++ b/deroulement.html
@@ -29,20 +29,13 @@
         <div>
             <h2>Début du projet</h2>
             <p>
-                ed ut tum ad senem senex de senectute, sic hoc libro ad amicum amicissimus scripsi
-                de
-                amicitia.
-                Tum est Cato locutus, quo erat nemo fere senior temporibus illis, nemo prudentior; nunc Laelius et
-                sapiens
-                (sic
-                enim est
-                habitus) et amicitiae gloria excellens de amicitia loquetur. Tu velim a me animum parumper avertas,
-                Laelium
-                loqui ipsum
-                putes. C. Fannius et Q. Mucius ad socerum veniunt post mortem Africani; ab his sermo oritur, respondet
-                Laelius,
-                cuius tota
-                disputatio est de amicitia, quam legens te ipse cognosces.
+                La première réunion avec nos clients a été très utile pour nous lancer dans le projet. À l'issue de
+                cette réunion, nos clients nous ont envoyé de la documentation à lire concernant les travaux déjà menés
+                sur l'étude que nous allons poursuivre. Ainsi, nous nous sommes assurés d'avoir bien compris le contenu
+                de ces documents en confrontant entre nous nos points de vue sur les aspects les plus complexes, et en
+                allant demander des précisions à nos tuteurs à propos des notions compliquées et les plus importantes,
+                notamment sur le rétablissement de la confiance entre la phase 2 et 3.
+
             </p>
         </div>
 
@@ -68,26 +61,23 @@
 
         <div>
             <h2>Passation de l'expérience</h2>
+            <h3>Recrutement</h3>
             <p>
-                ed ut tum ad senem senex de senectute, sic hoc libro ad amicum amicissimus scripsi
-                de
-                amicitia.
-                Tum est Cato locutus, quo erat nemo fere senior temporibus illis, nemo prudentior; nunc Laelius et
-                sapiens
-                (sic
-                enim est
-                habitus) et amicitiae gloria excellens de amicitia loquetur. Tu velim a me animum parumper avertas,
-                Laelium
-                loqui ipsum
-                putes. C. Fannius et Q. Mucius ad socerum veniunt post mortem Africani; ab his sermo oritur, respondet
-                Laelius,
-                cuius tota
-                disputatio est de amicitia, quam legens te ipse cognosces.
+                Le recrutement s'est avéré être une étape complexe pour plusieurs raisons. En effet, chaque expérience
+                comprenait le remplissage des questionnaires, la participation au jeu Galèrapagos et l'explication des
+                règles si nécessaire. Une session durait en moyenne 1h30. Cette durée limitée restreignait le nombre de
+                créneaux disponibles pour nous, les expérimentateurs, tout en respectant nos propres emplois du temps.
+                Cela a aussi dissuadé les personnes de participer à notre expérience. De plus, comme l'expérience est
+                complexe et longue, il fallait au moins que deux personnes de notre groupe soient présentes.
+                <br><br>
+                Comme il manquait 15 participants, nous avons décidé de demander à plusieurs camarades de l'école de
+                passer notre expérience.
             </p>
+            <h3>Passation </h3>
         </div>
 
         <div>
-            <h2>Fin du projet</h2>
+            <h2>Analyses des résultats</h2>
             <p>
                 ed ut tum ad senem senex de senectute, sic hoc libro ad amicum amicissimus scripsi
                 de
@@ -106,7 +96,6 @@
             </p>
         </div>
     </div>
-
 
 
     <footer>
