--- a/deroulement.html
+++ b/deroulement.html
@@ -42,20 +42,14 @@
         <div>
             <h2>Préparation de l'expérience</h2>
             <p>
-                ed ut tum ad senem senex de senectute, sic hoc libro ad amicum amicissimus scripsi
-                de
-                amicitia.
-                Tum est Cato locutus, quo erat nemo fere senior temporibus illis, nemo prudentior; nunc Laelius et
-                sapiens
-                (sic
-                enim est
-                habitus) et amicitiae gloria excellens de amicitia loquetur. Tu velim a me animum parumper avertas,
-                Laelium
-                loqui ipsum
-                putes. C. Fannius et Q. Mucius ad socerum veniunt post mortem Africani; ab his sermo oritur, respondet
-                Laelius,
-                cuius tota
-                disputatio est de amicitia, quam legens te ipse cognosces.
+                Pendant la préparation de l'expérience, nous avons tout d'abord réadapté le protocole expérimental, les
+                questionnaires ainsi que les diaporamas d'explications pour les participants. Ensuite, nous nous sommes
+                familiarisés le plus possible avec le protocole expérimental. Pour cela, nous avons réalisé des
+                expériences tests entre nous. De plus, afin d'être plus efficaces lorsque nous devions interagir avec
+                les participants à travers les indications de l'IA, nous avons réalisé plusieurs graphiques de
+                décisions. Enfin, nous avons réfléchi à la disposition et l'installation du matériel pour accueillir et
+                faire passer
+                l'expérience dans les meilleures conditions.
             </p>
         </div>
 
@@ -74,25 +68,29 @@
                 passer notre expérience.
             </p>
             <h3>Passation </h3>
+            <p>
+                Chaque session expérimentale dure entre 90 et 120 minutes. Dès l'arrivée des participants, nous nous
+                sommes
+                assuré de créer un environnement accueillant et de leur fournir une explication claire de la tâche à
+                accomplir.Les participants ont ensuite bénéficié d'un entraînement de 10 minutes. Cette période
+                d'initiation leur permet de se familiariser avec les règles et les
+                mécanismes du jeu. A la fin de cet entraînement, les participants ont commencé l'expérience.
+                <br><br>
+                Concernant
+                nos ressentis, il a été intéressant d'interagir avec les participants lors de nos expériences. Les
+                observer, étudier leurs
+                réactions pendant le jeu et veiller au bon déroulement de l'expérience ont été des moments plaisant.
+            </p>
         </div>
 
         <div>
             <h2>Analyses des résultats</h2>
             <p>
-                ed ut tum ad senem senex de senectute, sic hoc libro ad amicum amicissimus scripsi
-                de
-                amicitia.
-                Tum est Cato locutus, quo erat nemo fere senior temporibus illis, nemo prudentior; nunc Laelius et
-                sapiens
-                (sic
-                enim est
-                habitus) et amicitiae gloria excellens de amicitia loquetur. Tu velim a me animum parumper avertas,
-                Laelium
-                loqui ipsum
-                putes. C. Fannius et Q. Mucius ad socerum veniunt post mortem Africani; ab his sermo oritur, respondet
-                Laelius,
-                cuius tota
-                disputatio est de amicitia, quam legens te ipse cognosces.
+                À l'issue des expériences, nous avons analysé les données que nous avons recueillies. Pour visualiser et
+                comparer les résultats obtenus avec ceux de l'étude de référence, nous avons réalisé des box plots. Ces
+                diagrammes offrent une représentation claire de la distribution des réponses et permettent une
+                comparaison visuelle efficace. Il a été intéressant d'appliquer les connaissances et les compétences que
+                nous avons acquises en cours de statistique afin de pouvoir analyser ces résultats.
             </p>
         </div>
     </div>
