--- a/gdp.html
+++ b/gdp.html
@@ -26,51 +26,64 @@
     <div>
       <h2>Organisation</h2>
       <p>
-        ed ut tum ad senem senex de senectute, sic hoc libro ad amicum amicissimus scripsi
-        de
-        amicitia.
-        Tum est Cato locutus, quo erat nemo fere senior temporibus illis, nemo prudentior; nunc Laelius et sapiens
-        (sic
-        enim est
-        habitus) et amicitiae gloria excellens de amicitia loquetur. Tu velim a me animum parumper avertas, Laelium
-        loqui ipsum
-        putes. C. Fannius et Q. Mucius ad socerum veniunt post mortem Africani; ab his sermo oritur, respondet
-        Laelius,
-        cuius tota
-        disputatio est de amicitia, quam legens te ipse cognosces.
+        Nous avons adopté une approche agile pour mener notre projet, avec des réunions hebdomadaires entre les membres
+        du
+        groupe pour discuter des avancements et planifier les tâches. Nous avons également organisé des
+        réunions régulière avec les clients afin de présenter les progrès, discuter des difficultés, notamment de
+        problèmes informatiques et planifier les étapes
+        suivantes. Chaque réunion était suivie d'un compte rendu détaillé déposé sur google drive. Cette méthode a
+        permis de maintenir une
+        communication efficace et a permis de réagir rapidement quand il le fallait.
       </p>
     </div>
 
     <div>
       <h2>Planning</h3>
         <p>
-          mettre notre échéancier ici
+          Des le début nous projet, nous avons réalisé un diagramme de Gantt afin de de s'organiser et de plannifier
+          notre travail.
+          <br> <br>
+          Pour retrouver notre échéancier prévisionnel :<a href="echeancier.html" id="planning"> cliquez ici</a>
         </p>
     </div>
 
     <div>
       <h2>Communication</h3>
         <p>
-          ed ut tum ad senem senex de senectute, sic hoc libro ad amicum amicissimus scripsi
-          de
-          amicitia.
-          Tum est Cato locutus, quo erat nemo fere senior temporibus illis, nemo prudentior; nunc Laelius et sapiens
-          (sic
-          enim est
-          habitus) et amicitiae gloria excellens de amicitia loquetur. Tu velim a me animum parumper avertas, Laelium
-          loqui ipsum
-          putes. C. Fannius et Q. Mucius ad socerum veniunt post mortem Africani; ab his sermo oritur, respondet
-          Laelius,
-          cuius tota
-          disputatio est de amicitia, quam legens te ipse cognosces.
+          Nous utilisions principalement Messenger pour échanger sur nos avancements respectifs et coordonner des
+          sessions de travail en groupe, portant sur un ou plusieurs aspects du projet.
         </p>
+        <div id="logo">
+          <img src="./images/logo_messenger.jpg" alt="logo Messenger">
+        </div>
+        <p>
+          Pour ce qui est de la communication avec nos tuteurs, nous échangions principalement par e-mail. Nous
+          planifiions ces rencontres en fonction de nos besoins, à l'aide de Google Agenda. Lors de ces réunions, nous
+          leur posions des
+          questions relatives au projet et leur faisions part de nos avancements.
+        </p>
+        <div id="logo">
+          <img src="./images/logo_calendar.png" alt="logo google calendar">
+          <img src="./images/logo_gmail.png" alt="logo gmail">
+        </div>
+
+        <p>
+          Enfin, tous nos documents et recherches étaient partagés avec l'ensemble du groupe, y compris nos clients, via
+          Google Drive et GitLab.
+        </p>
+        <div id="logo">
+          <img src="./images/logo_drive.png" alt="logo google drive">
+          <img src="./images/logo_gitlab.webp" alt="logo GitLab">
+        </div>
+
     </div>
 
     <div>
       <h2>Matrice des risques</h3>
-        <p>
-          matrice des risques ici
-        </p>
+        <div id="logo">
+          <img src="./images/matrice_risque.png" alt="Matrice des risques">
+        </div>
+        <br>
     </div>
 
   </div>
