--- a/livrable.html
+++ b/livrable.html
@@ -25,44 +25,53 @@
     <div id="contenu">
         <h1>Livrables</h1>
         <p>
-            Texte explicatif livrables.ed ut tum ad senem senex de senectute, sic hoc libro ad amicum amicissimus
-            scripsi de
-            amicitia.
-            Tum est Cato locutus, quo erat nemo fere senior temporibus illis, nemo prudentior; nunc Laelius et sapiens
-            (sic
-            enim est
-            habitus) et amicitiae gloria excellens de amicitia loquetur. Tu velim a me animum parumper avertas, Laelium
-            loqui ipsum
-            putes. C. Fannius et Q. Mucius ad socerum veniunt post mortem Africani; ab his sermo oritur, respondet
-            Laelius,
-            cuius tota
-            disputatio est de amicitia, quam legens te ipse cognosces.
+            Notre projet nous a conduit à produire plusieurs documents. Vous trouverez ci-dessous tous les documents que
+            nous avons produits.
         </p>
         <div>
             <h2>Cahier des charges</h2>
-            <p>
-                On met le cahier des charges ici
-            </p>
-        </div>
-
-        <div>
-            <h2>Protocole expérimental</h2>
-            <p>
-                On met le Protocole exp ici
-            </p>
+            <div id="pdf">
+                <embed src="./pdf/cdc.pdf" type="application/pdf">
+            </div>
         </div>
 
         <div>
             <h2>Diaporama des règles du jeu avec son interface</h2>
-            <p>
-                On met le diapo ici
-            </p>
+            <div id="pdf">
+                <embed src="./pdf/regles.pdf" type="application/pdf">
+            </div>
         </div>
 
         <div>
-            <h2>Règles IA</h2>
+            <h2>graphiques des règles de l'IA</h2>
+            <div id="pdf">
+                <embed src="./pdf/ia.pdf" type="application/pdf">
+            </div>
+            <br>
+            <div id="pdf">
+                <embed src="./pdf/exception.pdf" type="application/pdf">
+            </div>
+            <br>
+            <div id="pdf">
+                <embed src="./pdf/scenario.pdf" type="application/pdf">
+            </div>
+        </div>
+
+        <div>
+            <h2>Analyses des résultats</h2>
+            <div id="pdf">
+                <embed src="./pdf/analyse.pdf" type="application/pdf">
+            </div>
+        </div>
+
+        <div>
+            <h2>Wiki</h2>
             <p>
-                On met les différents graph qu'on a fait
+                A la demande de notre client, nous avons réalisé un wiki sur GitLab.
+                <a id="wiki"
+                    href="https://gitub.u-bordeaux.fr/cih/galerapagos/jeucoll_experimentation_2023/-/wikis/WIKI-JEUCOLL'">
+                    Lien vers le wiki
+                </a>
             </p>
         </div>
 
