--- a/index.html
+++ b/index.html
@@ -66,7 +66,8 @@
       <h2>Notre équipe</h2>
       <h3 id="photo">Nos tuteurs</h3>
       <p>
-        Nos tuteurs travaillent dans le domaine de la cognitique et de l’ingénierie humaine au sein du
+        Nos tuteurs, Hélène Unrein et Théodore Letouze travaillent dans le domaine de la cognitique et de l’ingénierie
+        humaine au sein du
         laboratoire IMS.
       </p>
       <div id="tuteur">
@@ -80,7 +81,8 @@
         <img src="./images/LEREUIL.JPG" alt="Théo Lereuil">
         <img src="./images/PEYROUNY.JPG" alt="Eudes Peyrouny Mazeau">
       </div>
-      <p>Nous sommes trois étudiants de première année de l’ENSC qui sommes motivés par le fait de travailler dans le
+      <p>Nous sommes trois étudiants, Adrien Théo et Eudes, de première année de l’ENSC qui sommes motivés par le fait
+        de travailler dans le
         milieu de la recherche en
         faisant passer des expériences scientifiques qui utilisaient le jeu Galèrapagos. </p>
     </div>
